# mcp-base

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: advanced_patterns.py  auth_patterns.py  capsule_server.py  custom_server.py  minimal_server.py
mcp_base/: __init__.py  server.py  utils.py
mcp_server_toolkit/: __init__.py  api_client.py  base_plugin.py  capsule_server.py  cli.py  server.py
mcp_server_toolkit/plugins/: __init__.py  capsule.py
templates/: .env.example.template  Makefile.template  README.md.template  pyproject.toml.template  uv.lock.template
templates/.github/workflows/: test.yml.template
templates/tests/: __init__.py.template  test_server.py.template
templates/{{PACKAGE_NAME}}/: __init__.py.template  cli.py.template  server.py.template
tests/: __init__.py  test_server.py
