[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-base"
version = "0.1.0"
description = "A foundational library for building Model Context Protocol (MCP) servers"
authors = [{ name = "Fuzzy Labs", email = "tom@fuzzylabs.ai" }]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastmcp>=2.2.5",
    "httpx>=0.25",
    "python-dotenv",
    "pydantic>=2.0",
    "typing-extensions>=4.0"
]

[project.optional-dependencies]
dev = ["black", "isort", "pytest", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/fuzzylabs/mcp-base"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pyyaml>=6.0",
    "mypy>=1.0.0",
]